FIX: close icon overlaping input in mobile view

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,7 @@ body { font-family: Roboto, "Helvetica Neue", sans-serif; }
   border: none;
   background-color: transparent;
   color: $my-primary-color;
+  width: fit-content;
 }
 
 button {
